# GANA

./: .cproject  .gititgnore  .project  CMakeLists.txt  README.md  sal
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.xps_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.xps_0/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.xps_0/FP.org.eclipse.ptp.remote.rse.core._0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.xps_0/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Debug/: makefile  nsightbuilddata  objects.mk
Debug/include/GANA/: subdir.mk
Debug/src/: continuous.d  grid.d  main.d  primitives.d  subdir.mk  utils.d
aux/: Untitled.ipynb  bu  check.ipynb  comp.sh  continuous.d  grid.d  kernels.d  main.d  utils.d
aux/src/: continuous.d  grid.d  main.d  utils.d
chemfiles/tests/capi/doc/chfl_topology/: add_residue.c
include/GANA/: continuous.hpp  grid.hpp  kernels.cu  primitives.cuh  primitives.hpp  utils.hpp
src/: continuous.cpp  grid.cpp  main.cu  primitives.cpp  primitives.cu  utils.cpp
